--- a/src/components/boton/boton.css
+++ b/src/components/boton/boton.css
@@ -1,22 +1,28 @@
 .amarillo {
-  width: 203px;
-  height: 56px;
-  flex-grow: 0;
   display: flex;
+  flex-grow: 0;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   gap: 10px;
-  padding: 12px 20px;
+  cursor:pointer;
   border-radius: 12px;
   background-color: #f5c249;
-  font-family: Poppins;
-  font-size: 18px;
+  padding: 12px 20px;
+  height: 56px;
+  color: #16171d;
+  font-style: normal;
   font-weight: 500;
   font-stretch: normal;
-  font-style: normal;
+  font-size: 18px;
   line-height: 1.33;
+  font-family: Poppins;
   letter-spacing: normal;
   text-align: left;
-  color: #16171d;
+}
+
+.amarillo:hover ,
+.amarillo:active {
+  background-color: #f5c249;
+  box-shadow: inset 0 0 0 1000px rgba(22, 23, 29, 0.5);
 }
