--- a/src/components/navBar/navBar.css
+++ b/src/components/navBar/navBar.css
@@ -1,14 +1,13 @@
-.navbar {
+.navbar, .navbar-brand, .navbar-items {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  background: #16171d;
-  padding: 1.75rem 10.9rem 1.75rem 9.4rem;
 }
 
-.navbar-brand {
-  display: flex;
-  align-items: center;
+.navbar {
+  justify-content: space-between;
+  background: #16171d;
+  padding: 1.7rem 2rem 1rem 4rem;
+  width: 90%;
 }
 
 .navbar-logo {
@@ -17,21 +16,15 @@
   width: 174px;
   height: 52px;
   color: #ffffff;
-  font-style: normal;
-  font-weight: 600;
-  font-stretch: normal;
-  font-size: 32px;
-  line-height: 1.63;
-  font-family: Poppins;
-  letter-spacing: normal;
+  font: 600 32px/1.63 "Poppins", sans-serif;
   text-align: center;
 }
+
 .navbar-Cript {
   color: #f5c249;
 }
 
 .navbar-items {
-  display: flex;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -43,26 +36,83 @@
   width: 63px;
   height: 24px;
   color: #a7aebf;
-  font-style: normal;
-  font-weight: normal;
-  font-stretch: normal;
-  font-size: 16px;
-  line-height: 1.5;
-  font-family: Poppins;
-  letter-spacing: normal;
+  font: 400 16px/1.5 "Poppins", sans-serif;
   text-align: left;
 }
 
 .navbar-item:hover {
   color: orangered;
-  /* height: 100%; */
 }
 
 .navbar-contact {
-  margin: 1px 0 0 429px;
-  padding: 12px 20px;
-  width: 203px;
-  height: 56px;
+  margin: 0 0 0 25rem;
   font-size: 16px;
-  width: 203px;
+}
+
+.navbar-menu, .hidden {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .navbar {
+    /* width:100%; */
+    /* gap:5rem; */
+    padding: 0.5rem 2rem;
+    position:fixed;
+  }
+  .navbar-boton,
+  .navbar-items {
+    display: none;
+  }
+  .navbar-logo {
+    padding: 0;
+  }
+  .navbar-contact {
+    margin: 1px 0 0 107.25px;
+  }
+  .navbar-menu {
+    display: block;
+  }
+  .navbar-mobile-menu {
+    display: flex;
+    position: fixed; /* Cambiado de absolute a fixed para que se mantenga en la pantalla */
+    top: 0;
+    left: 0; 
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    background: #16171d; 
+    padding: 0;
+    margin:4rem 0 0 0;
+    width: 100%; 
+    height: 100%; 
+    color: #ffffff; 
+
+}
+
+.navbar-mobile-hambuger-menu {
+    margin: 0; 
+    padding: 0; 
+    width: 100%; 
+    list-style-type: none; 
+}
+
+.navbar-mobile-hambuger-menu li {
+    background-color: #16171d; 
+    padding: 14px 22px; 
+    width: 100%;
+    color: #ffffff; 
+    text-align: center; 
+}
+
+.navbar-mobile-hambuger-menu li:hover {
+    background-color: #f5c249; 
+    color: #16171d; 
+    font-weight: 600;
+}
+
+.hidden {
+    display: none;
+}
 }
