--- a/src/components/options/option.css
+++ b/src/components/options/option.css
@@ -1,49 +1,57 @@
-.gallery {
+.gallery,
+.box {
   display: flex;
-  flex-direction: row;
   justify-content: center;
-  margin-top:  5rem ;
-  gap:2px;
+  margin-left:5rem;
+}
+.gallery {
+  flex-direction: row;
+  margin-top: 3.5rem;
 }
 .box {
-  margin: 0 32px 0 0;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 2rem 0 0;
   border: 2px solid #787a8d;
   border-radius: 24px;
-  padding: 40px 32px;
-  width: 352px;
-  display:flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  gap:1rem;
-
+  padding: 2rem 1rem;
+  width: 18rem;
 }
-.Options-title{
+.Options-title,
+.Options-description {
+  flex-grow: 0;
   width: 288px;
+  font-style: normal;
+  font-stretch: normal;
+  font-family: Poppins;
+  letter-spacing: normal;
+  text-align: center;
+}
+
+.Options-title {
   height: 32px;
-  flex-grow: 0;
-  font-family: Poppins;
-  font-size: 20px;
-  font-weight: 600;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1.6;
-  letter-spacing: normal;
-  text-align: center;
   color: #fff;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.6;
+}
+.Options-description {
+  height: 72px;
+  color: #787a8d;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.5;
 }
 
-.Options-description{
-  width: 288px;
-  height: 72px;
-  flex-grow: 0;
-  font-family: Poppins;
-  font-size: 16px;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1.5;
-  letter-spacing: normal;
-  text-align: center;
-  color: #787a8d;
-} 
+@media (max-width: 768px) {
+  .gallery {
+    flex-direction: column;
+    align-items: center;
+    margin: 3rem 0 0 0;
+    padding: 0;
+  }
+  .box {
+    margin:1rem;
+    padding: 1rem;
+  }
+}
