--- a/src/components/send/send.css
+++ b/src/components/send/send.css
@@ -16,3 +16,25 @@
     padding: 35px 37px 18.5px 38px; 
     height: 370px;
 }
+@media (max-width: 768px) {
+    .form-format{
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        margin:0;
+        padding:0;      
+    }
+    .form-format img{
+        width: 90%;
+    }
+    .baseForm{
+        width: 90%;
+        margin:0.5rem;
+        padding:0.7rem;
+    }
+
+    .baseForm input{
+        width: 80%;
+    
+    }
+}
