--- a/src/components/homePage/homePage.css
+++ b/src/components/homePage/homePage.css
@@ -1,44 +1,92 @@
 .homePage {
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-between;
-    align-items: center;
-    background: #16171d;
-    padding: 5.2rem 0rem 1.7rem 10rem;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+  background: #16171d;
+  padding: 2rem 0rem 1.7rem 5rem;
 }
-.homePage-header{
-    display:flex;
-    flex-flow: column nowrap;
-    gap:1rem;
-    width:30rem;
-}
-.homePage-title{
-    flex-grow: 0;
-    width: 482px;
-    height: 128px;
-    color: #fff;
-    font-style: normal;
-    font-weight: bold;
-    font-stretch: normal;
-    font-size: 44px;
-    line-height: 1.45;
-    font-family: Poppins;
-    letter-spacing: normal;
-    text-align: left;
-}
-.homePage-description{
-    flex-grow: 0;
-    margin-bottom: 3.5rem;
-    width: 311px;
-    height: 24px;
-    color: #787a8d;
-    font-style: normal;
-    font-weight: normal;
-    font-stretch: normal;
-    font-size: 16px;
-    line-height: 1.5;
-    font-family: Poppins;
-    letter-spacing: normal;
-    text-align: left;
+.homePage-header {
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 1rem;
+  width: 30rem;
 }
 
+.homePage-title,
+.homePage-description {
+  flex-grow: 0;
+  font-style: normal;
+  font-stretch: normal;
+  font-family: Poppins;
+  letter-spacing: normal;
+  text-align: left;
+}
+.homePage-img{
+  display:flex;
+  justify-content: flex-start;
+  width: auto;
+}
+.homePage-title {
+  width: 482px;
+  height: 128px;
+  color: #fff;
+  font-weight: bold;
+  font-size: 44px;
+  line-height: 1.45;
+}
+
+.homePage-description {
+  margin-bottom: 3.5rem;
+  width: 311px;
+  height: 24px;
+  color: #787a8d;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+@media (max-width: 768px) {
+  .homePage {
+    flex-direction: column-reverse;
+    align-items: center;
+    padding: 5rem 0 0 0;
+    
+  }
+  .homePage-header{
+    max-width: 350px;
+    gap:1.5rem;
+  }
+  
+  .homePage-title,
+  .homePage-description {
+    align-items: center;
+    width: 95%;
+    text-align: center;
+    margin:0;
+    padding: 0;
+  }
+
+  .homePage-title{
+    font-size: 24px;
+    height: auto;
+  }
+  .homePage-description{
+    font-size: 19px;
+    height: auto;
+  }
+  .homePage-img{
+    display: flex;
+    justify-content: center;
+  }
+  .homePage-img img{
+    width: 100%;
+  }
+  
+  .homePage-boton {
+    display:flex;
+    justify-content: center;
+    margin:0;
+    padding: 0;
+  }
+}
