--- a/src/components/navBar/navBar.css
+++ b/src/components/navBar/navBar.css
@@ -59,6 +59,7 @@
     /* gap:5rem; */
     padding: 0.5rem 2rem;
     position:fixed;
+    z-index: 100;
   }
   .navbar-boton,
   .navbar-items {
@@ -75,7 +76,7 @@
   }
   .navbar-mobile-menu {
     display: flex;
-    position: fixed; /* Cambiado de absolute a fixed para que se mantenga en la pantalla */
+    position: fixed;
     top: 0;
     left: 0; 
     flex-direction: column;
@@ -88,7 +89,6 @@
     width: 100%; 
     height: 100%; 
     color: #ffffff; 
-
 }
 
 .navbar-mobile-hambuger-menu {
