--- a/src/components/navBar/navBar.css
+++ b/src/components/navBar/navBar.css
@@ -57,7 +57,7 @@
   .navbar {
     /* width:100%; */
     /* gap:5rem; */
-    padding: 0.5rem 2rem;
+    padding: 0.5rem 1rem;
     position:fixed;
     z-index: 100;
   }
@@ -80,12 +80,12 @@
     top: 0;
     left: 0; 
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     z-index: 9999;
     background: #16171d; 
     padding: 0;
-    margin:4rem 0 0 0;
+    margin:4.5rem 0 0 0;
     width: 100%; 
     height: 100%; 
     color: #ffffff; 
@@ -96,11 +96,12 @@
     padding: 0; 
     width: 100%; 
     list-style-type: none; 
+    font-size: 29px;
 }
 
 .navbar-mobile-hambuger-menu li {
     background-color: #16171d; 
-    padding: 14px 22px; 
+    padding: 1.5rem 0; 
     width: 100%;
     color: #ffffff; 
     text-align: center; 
@@ -109,10 +110,11 @@
 .navbar-mobile-hambuger-menu li:hover {
     background-color: #f5c249; 
     color: #16171d; 
-    font-weight: 600;
+    font-weight: 800;
 }
 
 .hidden {
     display: none;
 }
+
 }
