--- a/src/components/transactions/transactions.css
+++ b/src/components/transactions/transactions.css
@@ -79,6 +79,10 @@
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(1, 1fr);
   }
+  .Transactions-container{
+    height: auto;
+    gap:0;
+  }
   .transaction-title{
     display:flex;
     justify-content: center;
@@ -87,8 +91,11 @@
   }
   .Date-container{
     position: relative;
-    top:-3rem;
+    top:-1rem;
     margin:0;
     z-index:1;
+  }
+  .Text-container{
+    margin:0;
   }
 }
